# stui_plugins

./: Cargo.toml  LICENSE  plugins.json
.github/workflows/: release.yml
animetosho-provider/: Cargo.toml  plugin.toml
animetosho-provider/src/: lib.rs
example-provider/: Cargo.toml  plugin.toml
example-resolver/: Cargo.toml  plugin.toml
jackett-provider/: Cargo.toml  plugin.toml
jackett-provider/src/: lib.rs
jackett-provider/tests/: manifest_parses.rs
kitsunekko/: Cargo.toml  plugin.toml
kitsunekko/src/: lib.rs
kitsunekko/tests/: manifest_parses.rs
nyaa-provider/: Cargo.toml  plugin.toml
nyaa-provider/src/: lib.rs
opensubtitles-provider/: Cargo.toml  plugin.toml
opensubtitles-provider/src/: lib.rs
opensubtitles-provider/tests/: manifest_parses.rs
prowlarr-provider/: Cargo.toml  plugin.toml
prowlarr-provider/src/: lib.rs
prowlarr-provider/tests/: manifest_parses.rs
qobuz/: Cargo.toml  plugin.toml
qobuz/src/: lib.rs
rjm-rating-weights/: Cargo.toml  plugin.toml
rjm-rating-weights/src/: lib.rs
roon/: Cargo.toml  plugin.toml
roon/src/: lib.rs
rutracker-provider/: Cargo.toml  plugin.toml
rutracker-provider/src/: lib.rs
rym-provider/: Cargo.toml  plugin.toml
rym-provider/src/: lib.rs
sdk/: Cargo.toml
sdk/examples/hello-provider/: Cargo.toml
sdk/examples/hello-provider/src/: lib.rs
sdk/src/: capabilities.rs  id_sources.rs  kinds.rs  lib.rs  manifest.rs
soundcloud/: Cargo.toml  plugin.toml
soundcloud/src/: lib.rs
spotify/: Cargo.toml  plugin.toml
spotify/src/: lib.rs
subscene/: Cargo.toml  plugin.toml
subscene/src/: lib.rs
subscene/tests/: manifest_parses.rs
tidal/: Cargo.toml  plugin.toml
tidal/src/: lib.rs
torapi-provider/: Cargo.toml  plugin.toml
torapi-provider/src/: lib.rs
torrentio-provider/: Cargo.toml  plugin.toml
torrentio-provider/src/: lib.rs
torrentio-rpc/: Cargo.toml  README.md  plugin.json  plugin.py
yify-subs/: Cargo.toml  plugin.toml
yify-subs/src/: lib.rs
yify-subs/tests/: manifest_parses.rs
