[workspace]
resolver = "2"
members = [
    "sdk",
    "spotify",
    "tidal",
    "qobuz",
    "soundcloud",
    "jackett-provider",
    "prowlarr-provider",
    "opensubtitles-provider",
    "example-provider",
    "example-resolver",
    "kitsunekko",
    "subscene",
    "yify-subs",
    "rym-provider",
]

# torrentio-rpc is a Python plugin — not a Cargo member

[profile.release]
lto = true
opt-level = "z"
