[workspace]
resolver = "2"
members = [
    "sdk",
    "spotify",
    "tidal",
    "qobuz",
    "soundcloud",
    "jackett-provider",
    "prowlarr-provider",
    "torrentio-provider",
    "animetosho-provider",
    "nyaa-provider",
    "torapi-provider",
    "rutracker-provider",
    "opensubtitles-provider",
    "example-provider",
    "example-resolver",
    "kitsunekko",
    "subscene",
    "yify-subs",
    "rym-provider",
]


[profile.release]
lto = true
opt-level = "z"
