[package]
name        = "opensubtitles-provider"
version     = "0.1.0"
edition     = "2021"
description = "stui plugin — subtitle search via OpenSubtitles.com REST API"

[lib]
crate-type = ["cdylib"]

[dependencies]
stui-plugin-sdk = { path = "../sdk" }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

