[package]
name        = "prowlarr-provider"
version     = "0.1.0"
edition     = "2021"
description = "stui plugin — searches Prowlarr for torrents"

[lib]
crate-type = ["cdylib"]

[dependencies]
stui-plugin-sdk = { path = "../sdk" }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

