[package]
name        = "rym-provider"
version     = "0.1.0"
edition     = "2021"
description = "stui plugin — RateYourMusic metadata provider"

[lib]
crate-type = ["cdylib"]

[dependencies]
stui-plugin-sdk = { path = "../sdk" }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
regex         = "1"
thiserror    = "2"

[profile.release]
opt-level = "z"
lto       = true