[package]
name = "stui-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building stui plugins in Rust"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# Optional: convenience HTTP client for plugins that use it
[dependencies.reqwest]
version  = "0.12"
optional = true
features = ["json", "rustls-tls"]
default-features = false

[features]
default = []
http    = ["dep:reqwest"]

[profile.release]
# Optimise for size — WASM bundles should be small
opt-level = "z"
lto       = true
codegen-units = 1
strip     = true
panic     = "abort"   # required for wasm32-wasip1

[profile.dev]
panic = "abort"
