[package]
name = "stui-plugin-sdk"
version = "0.2.0"
edition = "2021"
description = "SDK for building stui plugins in Rust"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = { version = "0.8", features = ["parse"] }
thiserror    = "1"

# Optional: convenience HTTP client for plugins that use it
[dependencies.reqwest]
version  = "0.12"
optional = true
features = ["json", "rustls-tls"]
default-features = false

[features]
default = []
http    = ["dep:reqwest"]
