[package]
name        = "subscene"
version     = "0.1.0"
edition     = "2021"
description = "stui plugin — subtitle search via Subscene"

[lib]
crate-type = ["cdylib"]

[dependencies]
stui-plugin-sdk = { path = "../sdk" }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
reqwest          = { version = "0.12", features = ["json"], default-features = false }

